fix some compile warnings

--- a/linux/ls/Makefile
+++ b/linux/ls/Makefile
@@ -7,4 +7,5 @@ clean:
 	rm -f myls
 
 myls: main.c
-	gcc -Wall main.c print.c utility.c -o myls
+	gcc -Wall main.c print.c utility.c -o myls -D_GNU_SOURCE
+	# D_GNU_SOURCE is for get_current_dir_name() function
